--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -20,7 +20,10 @@
         "enterprise":"企业游",
         "high_end":"高端游",
         "outdoor":"爱玩户外",
-        "insurance":"保险"
+        "insurance":"保险",
+        "shoppingCart": "购物车",
+        "signOut": "注销",
+        "welcome": "欢迎回来"
     },
     "footer": {
         "detail" : "版权所有 @ React 旅游网"
